force-app/main/default/objects/Contact/fields/Dataverse_ID__c.field-meta.xml
<CustomField>
    <fullName>Dataverse_ID__c</fullName>
    <description>The contact ID in Microsoft Dataverse</description>
    <externalId>true</externalId>
    <inlineHelpText>The contact ID in Microsoft Dataverse</inlineHelpText>
    <label>Dataverse ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>