force-app/main/default/objects/Contact/fields/Dataverse_Tryout_ID__c.field-meta.xml
<CustomField>
    <fullName>Dataverse_Tryout_ID__c</fullName>
    <externalId>true</externalId>
    <label>Dataverse Tryout ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>